code and performance optimizations

--- a/Админка/groupUser.html
+++ b/Админка/groupUser.html
@@ -27,8 +27,8 @@
 
   <script>
     if (!localStorage.getItem('admIsLogIn')){
-   window.location = "login.html";
-};
+     window.location = "login.html";
+    };
   </script>
 
 </head>
@@ -151,8 +151,8 @@
                   <input type="text" id="toInput" onchange="tasksFilter()" class="form-control" autocomplete="off">
                 </div>
                 <div id="filterButtons">
-                  <button class="btn btn-sm btn-primary shadow-sm" onclick="tasksFilter('complite')" style="float: right; margin-left: 10px;"><i class="fas fa-filter"></i> Выполненные</button>
-                  <button class="btn btn-sm btn-primary shadow-sm" onclick="tasksFilter('incomplite')" style="float: right; margin-left: 10px;"><i class="fas fa-filter"></i> Невыполненные</button>
+                  <button class="btn btn-sm btn-primary shadow-sm" onclick="tasksFilter('complete')" style="float: right; margin-left: 10px;"><i class="fas fa-filter"></i> Выполненные</button>
+                  <button class="btn btn-sm btn-primary shadow-sm" onclick="tasksFilter('incomplete')" style="float: right; margin-left: 10px;"><i class="fas fa-filter"></i> Невыполненные</button>
                   <button class="btn btn-sm btn-primary shadow-sm" onclick="tasksFilter('all')" style="float: right; margin-left: 10px;"><i class="fas fa-filter"></i> Все</button>                
                 </div>
               </div>
@@ -210,168 +210,6 @@
 
   </div>
   <!-- End of Page Wrapper -->
-
-  <!-- Scroll to Top Button-->
-  <a class="scroll-to-top rounded" href="#page-top">
-    <i class="fas fa-angle-up"></i>
-  </a>
-
-   <nav aria-label="breadcrumb">
-</nav>
-<div class="list-group" id="to-do-list">
-</div>
-
-<div id="exampleModalLive" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="exampleModalLiveLabel" aria-hidden="true">
-  <div class="modal-dialog" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLiveLabel">Завершение задания</h5>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close" onclick="restore()">
-          <span aria-hidden="true">×</span>
-        </button>
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-dismiss="modal" onclick="restore()">Отмена</button>
-        <button type="button" class="btn btn-primary" onclick="compliteToDoItemOnServer()">Завершить</button>
-      </div>
-    </div>
-  </div>
-</div>
-
-<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-  <div class="modal-dialog" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">Добавить дело</h5>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close" onclick="restore()">
-          <span aria-hidden="true">&times;</span>
-        </button>
-      </div>
-      <div class="modal-body">
-        <form>
-          <div class="form-group">
-            <label for="to-do-tittle" class="col-form-label">Заголовок:</label>
-            <input type="text" class="form-control" id="to-do-tittle" autocomplete="off">
-          </div>
-          <div class="form-group">
-            <label for="to-do-description" class="col-form-label">Описание:</label>
-            <textarea class="form-control" id="to-do-description"></textarea>
-          </div>
-      <div class="form-group">
-            <label for="to-do-points" class="col-form-label">Количество баллов:</label>
-            <input type="text" class="form-control" id="to-do-points">
-          </div>
-      <div class="form-group">
-            <div class="form-group">
-        <label for="to-do-time-hours">Часы:</label>
-        <select class="form-control" id="to-do-time-hours">
-          <option>0</option>
-          <option>1</option>
-          <option>2</option>
-          <option>3</option>
-          <option>4</option>
-          <option>5</option>
-          <option>6</option>
-          <option>7</option>
-          <option>8</option>
-          <option>9</option>
-          <option>10</option>
-          <option>11</option>
-          <option>12</option>
-          <option>13</option>
-          <option>14</option>
-          <option>15</option>
-          <option>16</option>
-          <option>17</option>
-          <option>18</option>
-          <option>19</option>
-          <option>20</option>
-          <option>21</option>
-          <option>22</option>
-          <option>23</option>
-        </select>
-      </div>
-            <div class="form-group">
-        <label for="to-do-time-minutes">Минуты:</label>
-        <select class="form-control" id="to-do-time-minutes">
-          <option>00</option>
-          <option>01</option>
-          <option>02</option>
-          <option>03</option>
-          <option>04</option>
-          <option>05</option>
-          <option>06</option>
-          <option>07</option>
-          <option>08</option>
-          <option>09</option>
-          <option>10</option>
-          <option>11</option>
-          <option>12</option>
-          <option>13</option>
-          <option>14</option>
-          <option>15</option>
-          <option>16</option>
-          <option>17</option>
-          <option>18</option>
-          <option>19</option>
-          <option>20</option>
-          <option>21</option>
-          <option>22</option>
-          <option>23</option>         
-          <option>24</option>
-          <option>25</option>
-          <option>26</option>
-          <option>27</option>
-          <option>28</option>
-          <option>29</option>
-          <option>30</option>
-          <option>31</option>
-          <option>32</option>
-          <option>33</option>
-          <option>34</option>
-          <option>35</option>
-          <option>36</option>
-          <option>37</option>
-          <option>38</option>
-          <option>39</option>
-          <option>40</option>
-          <option>41</option>
-          <option>42</option>
-          <option>43</option>
-          <option>44</option>
-          <option>45</option>
-          <option>46</option>
-          <option>47</option>         
-          <option>48</option>
-          <option>49</option>
-          <option>50</option>
-          <option>51</option>
-          <option>52</option>
-          <option>53</option>
-          <option>54</option>
-          <option>55</option>
-          <option>56</option>
-          <option>57</option>
-          <option>58</option>
-          <option>59</option>
-        </select>
-      </div>
-            <div class="form-group">
-              <label for="to-do-date">Дата</label>
-        <input type="date" onchange='onDateChange()' class="form-control" id="to-do-date" name="date" placeholder="Дата" required>
-      </div>
-      </div>
-        </form>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-dismiss="modal" onclick="restore()">Закрыть</button>
-          <button type="button" id="addNewToDoItemButton" class="btn btn-primary" onclick="addToDoItem()">Добавить</button>
-          <button type="button" id="updateToDoItemButton" class="btn btn-primary" onclick="updateToDoItemOnServer(this)">Обновить</button>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
-    <!-- End of Content Wrapper -->
 
   </div>
   <!-- End of Page Wrapper -->
@@ -466,14 +304,14 @@
     for (i=0; i<tasks.length; i++){
       $('#groupedUsersList').append(
         '<tr>'+
-          '<td class="'+ (tasks[i].status === 'complite'?"border-left-success":"border-left-primary") +'">'+
+          '<td class="'+ (tasks[i].status === 'complete'?"border-left-success":"border-left-primary") +'">'+
             '<div class="custom-control custom-checkbox small">'+
-             '<input type="checkbox" class="custom-control-input task-checkbox" onchange="checkTask(this)" id="'+tasks[i].id+'" '+ (tasks[i].status === 'complite'?"disabled":"") +'>'+
+             '<input type="checkbox" class="custom-control-input task-checkbox" onchange="checkTask(this)" id="'+tasks[i].id+'" '+ (tasks[i].status === 'complete'?"disabled":"") +'>'+
              '<label class="custom-control-label" for="'+tasks[i].id+'"></label>'+
             '</div>'+
           '</td>' +
           '<td>'+tasks[i].title+'</td>'+
-          '<td>'+(tasks[i].status === 'complite'?"Выполнено":"Невыполнено")+'</td>'+
+          '<td>'+(tasks[i].status === 'complete'?"Выполнено":"Невыполнено")+'</td>'+
           '<td>'+tasks[i].date+'</td>'+
           '<td>'+tasks[i].points+'</td>'+
         '</tr>'
