--- a/Админка/register.html
+++ b/Админка/register.html
@@ -14,6 +14,11 @@
   <!-- Custom fonts for this template-->
   <script src="https://kit.fontawesome.com/60c6536c6a.js" crossorigin="anonymous"></script>
   <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
+  <script>
+    if (localStorage.getItem('admIsLogIn')) {
+      window.location.replace('groups.html');
+    }
+  </script>
 
   <!-- Custom styles for this template-->
   <link href="css/sb-admin-2.css" rel="stylesheet">
@@ -39,15 +44,16 @@
                   <div class="col-sm-6 mb-3 mb-sm-0">
                     <input type="text" class="form-control form-control-user" id="exampleFirstName" placeholder="Фамилия">
                   </div>
-                  <div class="col-sm-6">
+                  <div class="col-sm-6 mb-3 mb-sm-0">
                     <input type="text" class="form-control form-control-user" id="exampleLastName" placeholder="Имя">
                   </div>
-                  <div class="col-sm-6" style="margin-top: 15px;">
+                  <div class="col-sm-6 mt-sm-3" style="flex: 0 0 100%; max-width: 100%">
                     <input type="text" class="form-control form-control-user" id="exampleSurName" placeholder="Отчество">
                   </div>
                 </div>
                 <div class="form-group">
                   <input type="email" class="form-control form-control-user" id="exampleInputEmail" placeholder="Email">
+                  <div class="text-danger text-center" style="height: 0px" id="emailError"></div>
                 </div>
                 <div class="form-group row">
                   <div class="col-sm-6 mb-3 mb-sm-0">
@@ -56,6 +62,7 @@
                   <div class="col-sm-6">
                     <input type="password" class="form-control form-control-user" id="exampleRepeatPassword" placeholder="Повторите пароль">
                   </div>
+                  <div class="text-danger mx-auto" style="height: 0px" id="errorMessage"></div>
                 </div>
                 <a class="btn btn-primary btn-user btn-block text-gray-100" onclick="createAnAccount()">
                   Создать аккаунт
@@ -88,29 +95,75 @@
   <script src="js/sb-admin-2.min.js"></script>
 
   <script type="text/javascript">
+    $('document').ready(function(){
+      $('.form-control').focus(function(){
+        $('.form-control').not('#exampleInputEmail').css('border-color', '');
+        $('#errorMessage').animate({
+          height: '0px'
+        }, 300, 'linear', function(){
+          $('#errorMessage').text('');
+        })
+      });
+
+      $('#exampleInputEmail').focus(function(){
+        $(this).css('border-color', '');
+          $('#emailError').animate({
+          height: '0px'
+        }, 300, 'linear', function(){
+          $('#emailError').text('');
+        })
+      })
+
+      $('#exampleInputEmail').blur(function(){
+        if (!this.value.includes('@') && this.value.length >= 1) {
+          $('#emailError').text('Адрес должен содержать символ "@"');
+          $('#emailError').animate({
+            height: '24px'
+          }, 300, 'linear', function(){
+            $('#exampleInputEmail').css('border-color', "#f80000")
+          })
+        }
+      })
+    })
+
     function createAnAccount() {
-      if (document.getElementById('exampleInputPassword').value!==document.getElementById('exampleRepeatPassword').value) {
-        alert("Пароли не совпадают!")
-      }else{
-        var adminUser = {
-        firstName: document.getElementById("exampleFirstName").value,
-        lastName: document.getElementById("exampleLastName").value,
-        surName: document.getElementById("exampleSurName").value,
-        email: document.getElementById("exampleInputEmail").value,
-        password: document.getElementById("exampleInputPassword").value,
-        passwordConfirmation: document.getElementById("exampleRepeatPassword").value
+      if ($("#exampleInputPassword").val()!==$("#exampleRepeatPassword").val()) {
+        $('#exampleInputPassword').css('border-color', '#f80000');
+        $('#exampleRepeatPassword').css('border-color', '#f80000');
+        $('#errorMessage').text('Пароли не совпадают!');
+        $('#errorMessage').animate({
+          height: '24px'
+        }, 300, 'linear')
+        return;
+      }else if (!$('#exampleInputEmail').val().includes('@')) {
+        $('#exampleInputEmail').css('border-color', "#f80000");
+        $('#emailError').text('Введён неверный адрес!');
+        $('#emailError').animate({
+          height: '24px'
+        }, 300, 'linear')
+        return;
+      }else if ($('#exampleInputPassword').val().length < 6) {
+        $('#errorMessage').text('Пароль должен содержать как минимум 6 символов!');
+        $('#errorMessage').animate({
+          height: '24px'
+        }, 300, 'linear')
+        return;
       }
+      var adminUser = {
+        firstName: $('#exampleFirstName').val(),
+        lastName: $('#exampleLastName').val(),
+        surName: $('#exampleSurName').val(),
+        email: $('#exampleInputEmail').val(),
+        password: $('#exampleInputPassword').val()
       }
 
-       $.ajax({
+      $.ajax({
         type: 'POST',
         url: 'http://localhost:3000/users/regAdmin',
         crossDomain: true,
         data: adminUser,
         success: function(response) {
           if(response.success) {
-            localStorage.removeItem('admIsLogIn');
-            localStorage.removeItem('admUser');
             window.location.replace("login.html");
           } else {
             alert(response.error);
