--- a/Админка/404.html
+++ b/Админка/404.html
@@ -11,6 +11,8 @@
 
   <title>Упс!</title>
 
+  <link rel="shortcut icon" href="./img/atdl-ico.ico" type="image/x-icon">
+
   <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
 
   <!-- Custom fonts for this template-->
