--- a/Админка/groupControlCenter.html
+++ b/Админка/groupControlCenter.html
@@ -11,6 +11,8 @@
 
   <title>Группы</title>
 
+  <link rel="shortcut icon" href="./img/atdl-ico.ico" type="image/x-icon">
+
   <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
 
   <!-- Custom fonts for this template-->
@@ -122,6 +124,10 @@
       <!-- Main Content -->
       <div id="content">
 
+        <div class="col-1 pl-0 position-absolute" style="cursor: pointer;left: 1.5rem; z-index: 1;" onclick="window.history.back()">
+          <i class="fas fa-arrow-left fa-2x text-gray-300" aria-hidden="true"></i>
+        </div>
+
         <!-- Begin Page Content -->
         <div class="container-fluid">
 
@@ -131,7 +137,7 @@
 
           <!-- Page Heading -->
           <div class="d-sm-flex align-items-center justify-content-between mb-4">
-            <h1 class="h3 mb-0 text-gray-800" id = "groupTitle"></h1>
+            <h1 class="h3 mb-0 text-gray-800 pl-sm-5" id="groupTitle"></h1>
             <div class="btns-container">
               <a href="#" class="btn btn-success btn-icon-split" data-toggle="modal" data-target="#taskModal">
                 <span class="icon text-white-50">
@@ -379,13 +385,13 @@
     document.getElementById('groupTitle').innerText = name;
 
     $.ajax({
-      url: "http://localhost:3000/groups/users/" + name,
+      url: encodeURI("https://k16-omsk.ru/server_for_tasks/groups/users/" + name),
       type: 'GET',
       crossDomain: true,
       dataType: 'jsonp',
       contentType: 'application/json; charset=utf-8',
       success: function (users) {
-          drawGroupUsers(users);
+        drawGroupUsers(users);
       }
     });
 
@@ -411,7 +417,7 @@
             '<td>'+users[i].email+'</td>'+
           '</tr>'
         )
-      }
+      };
       $('#dataTable').DataTable({
         "language": {
           "url": "https://cdn.datatables.net/plug-ins/1.10.21/i18n/Russian.json"
@@ -432,10 +438,10 @@
       }
       $.ajax({
         type: 'POST',
-        url: 'http://localhost:3000/groups/removeUsers',
+        url: encodeURI('https://k16-omsk.ru/server_for_tasks/groups/removeUsers'),
         crossDomain: true,
         data: {
-      groupId: name,
+          groupId: name,
           peopleIds: JSON.stringify(peopleIds)
         },
         success: function(response) {
@@ -487,7 +493,7 @@
         usersIds.push(people[i].id);
       }
       
-      toDoItem = {
+      var toDoItem = {
         title: document.getElementById('to-do-tittle').value,
         description: document.getElementById('to-do-description').value,
         time: $('#to-do-time-hours').val() + ':' + $('#to-do-time-minutes').val(),
@@ -500,7 +506,7 @@
       $('#taskModal .modal-body form').css({'display': 'flex', 'justify-content': 'center'}).html('<img src="./img/load_new.webp">');
       $.ajax({
         type: 'POST',
-        url: 'http://localhost:3000/tasks/saveMultiple',
+        url: encodeURI('https://k16-omsk.ru/server_for_tasks/tasks/saveMultiple'),
         crossDomain: true,
         data: toDoItem,
         success: function(response) {
