--- a/Админка/groupUser.html
+++ b/Админка/groupUser.html
@@ -11,6 +11,8 @@
 
   <title>Дела ученика</title>
 
+  <link rel="shortcut icon" href="./img/atdl-ico.ico" type="image/x-icon">
+
   <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/js/bootstrap-datepicker.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/locales/bootstrap-datepicker.ru.min.js"></script>
@@ -55,7 +57,8 @@
       <li class="nav-item">
         <a class="nav-link" href="users.html">
           <i class="fas fa-user-friends"></i>
-          <span>Пользователи</span></a>
+          <span>Пользователи</span>
+        </a>
       </li>
 
       <!-- Divider -->
@@ -65,7 +68,8 @@
       <li class="nav-item">
         <a class="nav-link" href="groups.html">
           <i class="fas fa-users"></i>
-          <span>Группы</span></a>
+          <span>Группы</span>
+        </a>
       </li>
     
     <!-- Divider -->
@@ -124,6 +128,10 @@
       <!-- Main Content -->
       <div id="content">
 
+        <div class="col-1 pl-0 position-absolute" style="cursor: pointer;left: 1.5rem; z-index: 1" onclick="window.history.back()">
+          <i class="fas fa-arrow-left fa-2x text-gray-300" aria-hidden="true"></i>
+        </div>
+
         <!-- Begin Page Content -->
         <div class="container-fluid">
 
@@ -134,8 +142,7 @@
           </div>
  
           <div class="col-12 p-0 d-flex align-items-center justify-content-start mb-4">
-            <div class="col-1 col-md-auto pl-0" style="cursor: pointer;" onclick="window.history.back()"><i class="fas fa-arrow-left fa-2x text-gray-300" aria-hidden="true"></i></div>
-            <h1 id="userTitle" class="col-11 col-md-auto h3 mb-0 text-gray-800"></h1>
+            <h1 id="userTitle" class="col-11 col-md-auto h3 mb-0 text-gray-800 pl-sm-5"></h1>
           </div>
           <div class="card shadow mb-4">
             <!-- Card Header - Accordion -->
@@ -295,7 +302,7 @@
   
   function getTasks() {
     $.ajax({
-      url: "http://localhost:3000/tasks/get-by-email/"+email,
+      url: encodeURI("https://k16-omsk.ru/server_for_tasks/tasks/get-by-email/"+email),
       type: 'GET',
       crossDomain: true,
       dataType: 'jsonp',
@@ -341,7 +348,7 @@
   
   function checkTask(cb){
     $.ajax({
-      url: "http://localhost:3000/tasks/check/"+cb.id + '?status=' + cb.checked ,
+      url: encodeURI("https://k16-omsk.ru/server_for_tasks/tasks/check/"+cb.id + '?status=' + cb.checked) ,
       type: 'GET',
       crossDomain: true,
       dataType: 'jsonp',
