--- a/Админка/groups.html
+++ b/Админка/groups.html
@@ -11,6 +11,8 @@
 
   <title>Группы</title>
 
+  <link rel="shortcut icon" href="./img/atdl-ico.ico" type="image/x-icon">
+
   <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
 
   <!-- Custom fonts for this template-->
@@ -237,7 +239,7 @@
     }
 
     $.ajax({
-      url: "http://localhost:3000/groups/get",
+      url: encodeURI("https://k16-omsk.ru/server_for_tasks/groups/get"),
       type: 'GET',
       crossDomain: true,
       dataType: 'jsonp',
@@ -278,7 +280,7 @@
       };
       $.ajax({
         type: 'POST',
-        url: 'http://localhost:3000/groups/remove',
+        url: encodeURI('https://k16-omsk.ru/server_for_tasks/groups/remove'),
         crossDomain: true,
         data: {
           groupNames: JSON.stringify(groupNames)
@@ -316,7 +318,7 @@
 
       $.ajax({
         type: 'POST',
-        url: 'http://localhost:3000/groups/addToDoItems',
+        url: encodeURI('https://k16-omsk.ru/server_for_tasks/groups/addToDoItems'),
         crossDomain: true,
         data: toDoItem,
         success: function(response) {}
