--- a/Админка/login.html
+++ b/Админка/login.html
@@ -11,6 +11,8 @@
 
   <title>Войти</title>
 
+  <link rel="shortcut icon" href="./img/atdl-ico.ico" type="image/x-icon">
+
   <!-- Custom fonts for this template-->
   <script src="https://kit.fontawesome.com/60c6536c6a.js" crossorigin="anonymous"></script>
   <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
@@ -126,7 +128,7 @@
         admPassword: document.getElementById("exampleInputPassword").value
       }
       $.ajax({
-        url: "http://localhost:3000/users/adminLogin?admUserName=" + adminUser.admUserName + "&admPassword=" +  adminUser.admPassword,
+        url: (encodeURI("https://k16-omsk.ru/server_for_tasks/users/adminLogin?admUserName=" + adminUser.admUserName + "&admPassword=" +  adminUser.admPassword)),
         type: 'GET',
         crossDomain: true,
         dataType: 'jsonp',
