--- a/Админка/stat.html
+++ b/Админка/stat.html
@@ -11,6 +11,8 @@
 
   <title>Статистика</title>
 
+  <link rel="shortcut icon" href="./img/atdl-ico.ico" type="image/x-icon">
+
   <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
 
   <!-- Custom fonts for this template-->
@@ -281,7 +283,7 @@
     }
     
     $.ajax({
-      url: "http://localhost:3000/groups/getTop",
+      url: encodeURI("https://k16-omsk.ru/server_for_tasks/groups/getTop"),
       type: 'GET',
       crossDomain: true,
       dataType: 'jsonp',
@@ -312,7 +314,7 @@
     var allGroups = [];
     var allTasks = [];
     $.ajax({
-      url: "http://localhost:3000/groups/get",
+      url: encodeURI("https://k16-omsk.ru/server_for_tasks/groups/get"),
       type: 'GET',
       crossDomain: true,
       dataType: 'jsonp',
@@ -324,7 +326,7 @@
     });
     
     $.ajax({
-      url: "http://localhost:3000/tasks/getAllTasks",
+      url: encodeURI("https://k16-omsk.ru/server_for_tasks/tasks/getAllTasks"),
       type: 'GET',
       crossDomain: true,
       dataType: 'jsonp',
