--- a/Админка/users.html
+++ b/Админка/users.html
@@ -11,6 +11,8 @@
 
   <title>Пользователи</title>
 
+  <link rel="shortcut icon" href="./img/atdl-ico.ico" type="image/x-icon">
+
   <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
 
   <!-- Custom fonts for this template-->
@@ -24,7 +26,7 @@
 
   <script>
     if (!localStorage.getItem('admIsLogIn')){
-       window.location = "login.html";
+      window.location = "login.html";
     };
   </script>
 
@@ -288,7 +290,7 @@
       };
       $.ajax({
         type: 'POST',
-        url: 'http://localhost:3000/groups/create',
+        url: encodeURI('https://k16-omsk.ru/server_for_tasks/groups/create'),
         crossDomain: true,
         data: {
           name: document.getElementById('groupName').value,
@@ -301,7 +303,7 @@
     }
 
     $.ajax({
-      url: "http://localhost:3000/users/get",
+      url: encodeURI("https://k16-omsk.ru/server_for_tasks/users/get"),
       type: 'GET',
       crossDomain: true,
       dataType: 'jsonp',
@@ -312,7 +314,7 @@
     });
 
     $.ajax({
-      url: "http://localhost:3000/groups/get",
+      url: encodeURI("https://k16-omsk.ru/server_for_tasks/groups/get"),
       type: 'GET',
       crossDomain: true,
       dataType: 'jsonp',
@@ -337,7 +339,7 @@
       };
       $.ajax({
         type: 'POST',
-        url: 'http://localhost:3000/groups/addUsersToGroup',
+        url: encodeURI('https://k16-omsk.ru/server_for_tasks/groups/addUsersToGroup'),
         crossDomain: true,
         data: {
           name: document.getElementById('groupName').value,
@@ -401,7 +403,7 @@
       };
       $.ajax({
         type: 'POST',
-        url: 'http://localhost:3000/groups/update',
+        url: encodeURI('https://k16-omsk.ru/server_for_tasks/groups/update'),
         crossDomain: true,
         data: {
           name: group,
