--- a/Админка/usersStat.html
+++ b/Админка/usersStat.html
@@ -11,6 +11,8 @@
 
   <title>Статистика</title>
 
+  <link rel="shortcut icon" href="./img/atdl-ico.ico" type="image/x-icon">
+
   <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
 
   <!-- Custom fonts for this template-->
@@ -293,7 +295,7 @@
     var allTasks = [];
     var activeUserEmail;
     $.ajax({
-      url: "http://localhost:3000/users/get",
+      url: encodeURI("https://k16-omsk.ru/server_for_tasks/users/get"),
       type: 'GET',
       crossDomain: true,
       dataType: 'jsonp',
@@ -305,7 +307,7 @@
     });
     
     $.ajax({
-      url: "http://localhost:3000/users/getTop",
+      url: encodeURI("https://k16-omsk.ru/server_for_tasks/users/getTop"),
       type: 'GET',
       crossDomain: true,
       dataType: 'jsonp',
@@ -316,7 +318,7 @@
     });
     
     $.ajax({
-      url: "http://localhost:3000/tasks/getAllTasks",
+      url: encodeURI("https://k16-omsk.ru/server_for_tasks/tasks/getAllTasks"),
       type: 'GET',
       crossDomain: true,
       dataType: 'jsonp',
